# pyqt5-build-example

./: .gitignore  LICENSE  README.md  pyinstaller_build.bat  pyinstaller_build.sh  pyproject.toml  requirements.txt  run.py
.github/workflows/: briefcase_build.yml  pyinstaller_build.yml
smallapp/: __init__.py  api.py  gui.py  logger.py  runner.py
smallapp/assets/css/: page.css
smallapp/assets/templates/: page.html
smallapp/layouts/: content_window.py  error_message.py  html_content.py  reader_web.py
